# bakkesmod-rust

./: Cargo.toml  build.ninja  build.rs
binding/: Actor.cc  Actor.hh  Boost.cc  Boost.hh  BoostPickup.cc  BoostPickup.hh  CVar.cc  CVar.hh  CVarManager.cc  CVarManager.hh  Car.cc  Car.hh  Common.cc  Common.hh  Game.cc  Game.hh  PlayerReplicationInfo.cc  PlayerReplicationInfo.hh  Plugin.cc  Pri.cc  Pri.hh  PriX.cc  PriX.hh  Server.cc  Server.hh  TeamInfo.cc  TeamInfo.hh  Vehicle.cc  Vehicle.hh
crates/bakkesmod-macros/: Cargo.toml
crates/bakkesmod-macros/src/: lib.rs
examples/canvastest/: Cargo.toml
examples/canvastest/src/: lib.rs
examples/rustplugin/: Cargo.toml
examples/rustplugin/src/: lib.rs
examples/tinyplugin/: Cargo.toml
examples/tinyplugin/src/: lib.rs
include/bakkesmod/wrappers/: arraywrapper.h  wrapperstructs.h
lib/: bmrs.lib
src/: console.rs  errors.rs  game.rs  internal.rs  lib.rs  macros.rs
src/wrappers/: actor.rs  boost.rs  boost_pickup.rs  canvas.rs  car.rs  cvar.rs  cvar_manager.rs  game.rs  macros.rs  mmr.rs  mod.rs  player_replication_info.rs  pri.rs  server.rs  structs.rs  team_info.rs  vehicle.rs
src/wrappers/unreal/: actor.rs  air_control_component.rs  attachment_pickup.rs  ball.rs  ball_car_spring_pickup.rs  ball_freeze_pickup.rs  ball_lasso_pickup.rs  base_camera.rs  battarang_pickup.rs  boost.rs  boost_mod_pickup.rs  boost_override_pickup.rs  boost_pickup.rs  camera.rs  camera_x.rs  car.rs  car_component.rs  car_speed_pickup.rs  demolish_pickup.rs  dodge_component.rs  double_jump_component.rs  engine_ta.rs  fx_actor.rs  (+47 more)
(+7 files in other folders)
